# databasemanager

./: .dockerignore  AGENTS.md  AI_架构设计.md  Cargo.toml  Dockerfile  README.md  docker-compose.single.yml  docker-compose.yml  start.sh  架构设计.md  架构设计_修改版.md
ai-service/: Cargo.toml  README.md
ai-service/src/: handlers.rs  main.rs  models.rs  routes.rs  service.rs  state.rs
common/src/: config.rs  errors.rs  lib.rs  response.rs
common/src/models/: connection.rs
connection-service/src/: handlers.rs  main.rs  pool_manager.rs  routes.rs  service.rs
docs/: README.md
docs/api/: api-reference.md
docs/architecture/: ai-architecture.md  microservices.md  overview.md
docs/development/: coding-standards.md  deployment.md  getting-started.md
docs/services/: ai-service.md  connection-service.md  gateway.md  query-service.md
gateway/src/: handlers.rs  proxy.rs
query-service/src/: routes.rs
src/: main.rs
